[tool.poetry]
name = "certtool"
version = "0.1.0"
description = "Cedar private PKI management tool"
authors = []

[tool.poetry.dependencies]
attrs = "^23"
boto3 = "^1.21.4"
cryptography = "^39.0.1"
Django = "^4.2"
django-easysettings = "^2.0.1"
psycopg2 = "^2.9.3"
python = "^3.11,<3.12"
sentry-sdk = "^1.5.6"

django-pg-zero-downtime-migrations = "0.11"

uWSGI = "2.0.21"


[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
# 'isort' added on install of 'cedar_django_extras' to sort imports in migrations
# when they are created (before they are linted)
isort = "~5.10.0"
mypy = "^0.950"
# 'tblib' used to emit proper tracebacks when using django parallel tests
tblib = "1.7.0"
# Required for 'mypy' use
boto3-stubs = { extras = ["acm", "acm-pca", "secretsmanager"], version = "*" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
